--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>join bird bot</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://t.me/birdx2_bot/birdx?startapp=1042586845">
     <link rel="stylesheet" href="material/css/styles.css">
     <style>
         body {
