--- a/task.html
+++ b/task.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <button class="task-button" onclick="completeTask(100, 'https://youtube.com/@mrpusa8769?si=cmeMSLAUeBREkda7-')">🐸 claim</button>
+            <button class="task-button" onclick="completeTask(100, 'https://www.youtube.com/@MalawunSoya-')">🐸 claim</button>
         </div>
     
         <div class="task-container">
